# handin-5-sebbe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  handin5.c  palindrome.c  palindrome.h
test/: CMakeLists.txt  test_iterative.c  test_recursive.c
